mpeg4videoparse: ensure buffer metadata is writable before modifying it

https://bugzilla.gnome.org/show_bug.cgi?id=637824